# bar101

./: .gitignore  README.md  package-lock.json
bar101-storyline-gen/: Makefile  README.md  pyproject.toml
bar101-storyline-gen/assets/: news_images.json
bar101-storyline-gen/context/: plot_structure.json  timeline.json  world.json
bar101-storyline-gen/src/bar101_storyline/: CharacterStoryBuilder.py  ChatOpenerEngine.py  ChatStoryEngine.py  DecisionMaker.py  KeyCustomerPicker.py  NewsWriter.py  PlotShaper.py  TimelineIntegrator.py  TreePacker.py  extract-nodes.py  main.py
bar101-storyline-gen/story_tree/: book.json  characters.json  chat_dtomenko_decision.json  chat_dtomenko_main.json  chat_dtomenko_opener.json  chat_lkova_main.json  chat_lkova_opener.json  chat_npetrak_decision.json  chat_npetrak_main.json  chat_npetrak_opener.json  chat_olintz_decision.json  chat_olintz_main.json  chat_olintz_opener.json  chat_rmiskovic_main.json  chat_rmiskovic_opener.json  chat_shalek_decision.json  chat_shalek_main.json  chat_shalek_opener.json  cost.json  dilemma.json  news.json  node.json  timeline.json  visitors.json
bar101-storyline-gen/story_tree/a/: _plot.json  _transition.json  book.json  characters.json  chat_dtomenko_decision.json  chat_dtomenko_main.json  chat_lkova_decision.json  chat_lkova_main.json  chat_npetrak_main.json  chat_npetrak_opener.json  chat_olintz_main.json  chat_olintz_opener.json  chat_rmiskovic_main.json  chat_rmiskovic_opener.json  chat_shalek_decision.json  chat_shalek_main.json  chat_shalek_opener.json  cost.json  dilemma.json  news.json  node.json  timeline.json  visitors.json
bar101-storyline-gen/story_tree/b/: _plot.json  _transition.json  book.json  characters.json  chat_dtomenko_decision.json  chat_dtomenko_main.json  chat_dtomenko_opener.json  chat_lkova_main.json  chat_lkova_opener.json  chat_npetrak_decision.json  chat_npetrak_main.json  chat_npetrak_opener.json  cost.json  (+11 more)
bar101-storyline-gen/story_tree_bak/: chat_dtomenko_main.json  chat_lkova_main.json  chat_olintz_opener.json  node.json  visitors.json
bar101-storyline-gen/tests/: __init__.py  conftest.py  test_ai_service.py
bar101-voiceover/: Makefile  README.md  pyproject.toml
bar101-voiceover/scripts/: clean.sh
(+4188 files in other folders)
