[project]
name = "bar101-storyline-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "Krzysztof Jamroz",email = "kjamroz83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.69.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "diffusers (>=0.33.1,<0.34.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "bar101_storyline", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src/bar101_storyline"]