[project]
name = "bar101-voiceover"
version = "0.1.0"
description = ""
authors = [
    {name = "Krzysztof Jamroz",email = "kjamroz83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "tts (>=0.22.0,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
